[gd_scene load_steps=16 format=3 uid="uid://0yhtecd3nn4a"]

[ext_resource type="Script" path="res://Nodes/GoombaAlien/GoombaAlien.gd" id="1_h2ts8"]
[ext_resource type="Texture2D" uid="uid://d1inw82xh0efx" path="res://Sprites/green die 1.png" id="2_o35pj"]
[ext_resource type="Texture2D" uid="uid://bbwqd7ydixmr4" path="res://Sprites/green die 2.png" id="3_u5hnw"]
[ext_resource type="Texture2D" uid="uid://mh7tr0mm14wh" path="res://Sprites/green die 3.png" id="4_wn34x"]
[ext_resource type="Texture2D" uid="uid://bhn3lyt7gx536" path="res://Sprites/green die 4.png" id="5_apyoc"]
[ext_resource type="Texture2D" uid="uid://d0u1grex8tbij" path="res://Sprites/green die 5.png" id="6_2oyvs"]
[ext_resource type="Texture2D" uid="uid://crubhtkm4h0we" path="res://Sprites/green walk 0.png" id="7_h6exi"]
[ext_resource type="Texture2D" uid="uid://2tl6qvnh85pl" path="res://Sprites/green walk 1.png" id="8_sdiab"]
[ext_resource type="Texture2D" uid="uid://bi2n6tvu0chc7" path="res://Sprites/green walk 2.png" id="9_vfjgp"]
[ext_resource type="Texture2D" uid="uid://bddcr5f58e22f" path="res://Sprites/green walk 3.png" id="10_msqbt"]
[ext_resource type="Texture2D" uid="uid://ccetuxc2tgvoi" path="res://Sprites/green walk 4.png" id="11_oc1nx"]
[ext_resource type="PackedScene" uid="uid://8cclpqryrpk3" path="res://Nodes/HealthBar/health_bar.tscn" id="12_86daq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1kt8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o35pj")
}, {
"duration": 1.0,
"texture": ExtResource("3_u5hnw")
}, {
"duration": 1.0,
"texture": ExtResource("4_wn34x")
}, {
"duration": 1.0,
"texture": ExtResource("5_apyoc")
}, {
"duration": 1.0,
"texture": ExtResource("6_2oyvs")
}, {
"duration": 1.0,
"texture": ExtResource("6_2oyvs")
}, {
"duration": 1.0,
"texture": ExtResource("6_2oyvs")
}, {
"duration": 1.0,
"texture": ExtResource("6_2oyvs")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_h6exi")
}],
"loop": true,
"name": &"standing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_h6exi")
}, {
"duration": 1.0,
"texture": ExtResource("8_sdiab")
}, {
"duration": 1.0,
"texture": ExtResource("9_vfjgp")
}, {
"duration": 1.0,
"texture": ExtResource("10_msqbt")
}, {
"duration": 1.0,
"texture": ExtResource("11_oc1nx")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_on4uc"]
radius = 6.2
height = 15.6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w212"]
size = Vector2(3.5, 16)

[node name="GoombaAlien" type="CharacterBody2D" groups=["damage", "enemy", "parkour obstacle"]]
position = Vector2(435, 458)
scale = Vector2(2, 2)
collision_layer = 24
script = ExtResource("1_h2ts8")
direction = "left"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1kt8q")
animation = &"death"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.2)
shape = SubResource("CapsuleShape2D_on4uc")

[node name="attack_detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_detect"]
position = Vector2(0, 0.2)
shape = SubResource("CapsuleShape2D_on4uc")

[node name="wall_detect" type="Area2D" parent="."]
collision_layer = 524291
collision_mask = 524291

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_detect"]
position = Vector2(-5.75, -1)
shape = SubResource("RectangleShape2D_8w212")

[node name="HealthBar" parent="." instance=ExtResource("12_86daq")]
position = Vector2(0, -11)
scale = Vector2(0.2, 0.2)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="attack_detect" to="." method="_on_attack_detect_body_entered"]
[connection signal="body_entered" from="wall_detect" to="." method="_on_wall_detect_body_entered"]
[connection signal="body_exited" from="wall_detect" to="." method="_on_wall_detect_body_exited"]
